# ubuntu-desktop-automation

./: README.md
source/: CMakeLists.txt  entityFinder.cpp  entityFinder.h  main.cpp  mouseMover.cpp  mouseMover.h
